@@ -4,6 +4,7 @@ dgenf.orig,
 dgengamma,
 dgengamma.orig,
 dgompertz,
+dsurvspline,
 flexsurvreg,
 flexsurvspline,
 hgenf,
@@ -22,6 +23,7 @@ pgenf.orig,
 pgengamma,
 pgengamma.orig,
 pgompertz,
+psurvspline,
 plot.flexsurvreg,
 qgeneric,
 qgenf,
@@ -33,7 +35,8 @@ rgenf,
 rgenf.orig,
 rgengamma,
 rgengamma.orig,
-rgompertz
+rgompertz,
+summary.flexsurvreg
 )
 
 importFrom(graphics, plot)
@@ -45,3 +48,4 @@ importFrom(mvtnorm, rmvnorm)
 S3method(print, flexsurvreg)
 S3method(plot, flexsurvreg)
 S3method(lines, flexsurvreg)
+S3method(summary, flexsurvreg)
