@@ -1,3 +1,5 @@
+d/psurvspline and manpages
+
 MLE for Poly-Weibull and other poly-hazard models (make generic flexsurvpoly(base="weibull", ncause)  )
 dpqr for poly-hazard, dpolyhaz(base="weibull", ncause)
 
